--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,107 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img src="https://via.placeholder.com/50x50" class="page-header__logo-img" alt="Логотип Cat Energy (картинка)">
+        <img src="https://via.placeholder.com/50x50" class="page-header__logo-title" alt="Логотип Cat Energy (Текст)">
+      </a>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
 
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a>Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="page-main">
+      <h1 class="visually-hidden">Сайт питания для котов «Cat Energy»</h1>
+
+      <section class="intro">
+        <h2 class="intro__title">Функциональное питание для котов</h2>
+        <p class="intro__text">Занялся собой? Займись котом!</p>
+        <img src="https://via.placeholder.com/150x150" class="intro__image" alt="Фото питания для котов «Cat Energy»" >
+        <a href="form.html" class="intro__button">Подобрать программу</a>
+      </section>
+
+      <section class="programs">
+        <h2 class="visually-hidden">Программы питания</h2>
+        <ul class="programs__list">
+          <li class="programs__item programs__item--slim">
+            <h2 class="programs__title">Похудение</h2>
+            <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет
+            вашему питомцу сбросить лишний вес.</p>
+            <a href="#" class="programs__link">Каталог Slim</a>
+          </li>
+          <li class="programs__item pragrams__item--pro">
+            <h2 class="programs__title">Набор массы</h2>
+            <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак?
+            Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a href="#" class="programs__link">Каталог Pro</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item advantages__item--nutrients">
+            <p class="about__text">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="advantages__item advantages__item--simple">
+            <p class="about__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
+          <li class="advantages__item advantages__item--food">
+            <p class="about__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          </li>
+          <li class="advantages__item advantages__item--time">
+            <p class="about__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <h2 class="page-footer__title">
+        <a href="https://htmlacademy.ru/intensive/adaptive">Cat Energy</a>
+      </h2>
+
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item social__item--vkontakte">
+            <a href="https://vk.com/htmlacademy" class="social__link">
+              мы в Вконтакте
+            </a>
+          </li>
+          <li class="social__item social__item--instagram">
+            <a href="https://www.instagram.com/htmlacademy" class="social__link">
+              мы в Инстаграме
+            </a>
+          </li>
+          <li class="social__item social__item--facebook">
+            <a href="https://www.facebook.com/htmlacademy" class="social__link">
+              мы в Фейсбуке
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="page-footer__copyright copyright">
+        <p class="copyright__text">HTML Academy</p>
+        <a href="https://htmlacademy.ru/intensive/adaptive" class="copyright__link">
+          HTML Academy
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
